@@ -43,6 +43,7 @@
        <arg type="s" name="URI" direction="in" />
        <arg type="u" name="Time" direction="in" />
     </method>
+    <method name="SaveState"/>
 
     <signal name="ButtonPress">
       <arg type="u" name="Time" />
